--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.1",
     "slugify": "^1.6.5",
     "validator": "^13.7.0"
   }
