--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^6.7.0",
-    "helmet": "^6.0.1",
+    "helmet": "^3.23.3",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.0",
+    "mapbox-gl": "^2.13.0",
     "mongoose": "^6.8.2",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.1",
+    "pug": "^3.0.2",
     "slugify": "^1.6.5",
     "validator": "^13.7.0",
     "xss-clean": "^0.1.1"
