--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "mapbox-gl": "^2.13.0",
     "mongoose": "^6.8.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
     "pug": "^3.0.2",
+    "sharp": "^0.31.3",
     "slugify": "^1.6.5",
     "validator": "^13.7.0",
     "xss-clean": "^0.1.1"
