--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-rate-limit": "^6.7.0",
     "helmet": "^3.23.3",
     "hpp": "^0.2.3",
+    "html-to-text": "^9.0.5",
     "jsonwebtoken": "^9.0.0",
     "mapbox-gl": "^2.13.0",
     "mongoose": "^6.8.2",
@@ -37,6 +38,7 @@
     "pug": "^3.0.2",
     "sharp": "^0.31.3",
     "slugify": "^1.6.5",
+    "stripe": "^12.0.0",
     "validator": "^13.7.0",
     "xss-clean": "^0.1.1"
   },
